<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>mas</groupId>
    <artifactId>TileWorld</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
	<maven.compiler.source>8</maven.compiler.source>
	<maven.compiler.target>8</maven.compiler.target>
    </properties>

    <build>
	<plugins>
	    <plugin>
		<artifactId>maven-assembly-plugin</artifactId>
		<configuration>
		    <archive>
			<manifest>
			    <mainClass>mas.TileWorld</mainClass>
			</manifest>
		    </archive>
		    <descriptorRefs>
			<descriptorRef>jar-with-dependencies</descriptorRef>
		    </descriptorRefs>
		</configuration>
	    </plugin>
	</plugins>
    </build>

</project>
